<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
<!--	<parent>-->
<!--		<groupId>org.apache.flink</groupId>-->
<!--		<artifactId>flink-parent</artifactId>-->
<!--		<version>2.1-SNAPSHOT</version>-->
<!--	</parent>-->
	<groupId>org.unit.flink</groupId>
	<artifactId>flink-controller</artifactId>
	<name>FLink : Controller</name>
	<version>2.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>flink-controller-web</module>
		<module>flink-controller-dsl</module>
		<module>flink-controller-core</module>
	</modules>


	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<spotless.check.skip>true</spotless.check.skip>
		<flink.version>2.1-SNAPSHOT</flink.version>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-parent</artifactId>
				<version>3.4.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- 只放一些共享依赖，如 Lombok、JPA 注解、Validation -->
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version> <!-- ✅ 推荐写明版本 -->
			<scope>provided</scope>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.apache.logging.log4j</groupId>-->
<!--			<artifactId>log4j-slf4j-impl</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.logging.log4j</groupId>-->
<!--			<artifactId>log4j-api</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.logging.log4j</groupId>-->
<!--			<artifactId>log4j-core</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			&lt;!&ndash; API bridge between log4j 1 and 2 &ndash;&gt;-->
<!--			<groupId>org.apache.logging.log4j</groupId>-->
<!--			<artifactId>log4j-1.2-api</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
	</dependencies>



	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
		 		<configuration>
					<basedir>${basedir}</basedir>
					<mojoStatusPath>${project.build.directory}/mojo-status.properties</mojoStatusPath>
					<mainOutputDirectory>${project.build.outputDirectory}</mainOutputDirectory>
					<outputDirectory>${project.build.directory}/generated</outputDirectory>
					<projectArtifact>${project.artifact}</projectArtifact>
					<source>17</source>
					<target>17</target>
					<compilerArgs combine.children="append">
						<arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
						<arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
						<arg>--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED</arg>
						<arg>--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.30</version> <!-- 建议添加版本 -->
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
